feat!: Add support for master/replica with rbac.